Make atom feed ref a liknk

--- a/_posts/2015-02-15-atom.md
+++ b/_posts/2015-02-15-atom.md
@@ -4,4 +4,4 @@ title:  Atom feed added
 ---
 
 
-We've added an atom feed for this site.  Keep up with the CITE architecture by tracking http://cite-architecture.github.io/atom.xml.
+We've added an atom feed for this site.  Keep up with the CITE architecture by tracking <http://cite-architecture.github.io/atom.xml>.
